--- a/MainStyleSheet.css
+++ b/MainStyleSheet.css
@@ -1,13 +1,3 @@
-/*
-   _ ____                       
-  (_)  _ \                      
-   _| |_) |_ __ __ ___   _____  
-  | |  _ <| '__/ _` \ \ / / _ \ 
-  | | |_) | | | (_| |\ V / (_) |
-  | |____/|_|  \__,_| \_/ \___/ 
- _/ |                           
-|__/                            
-
 /*      _                     _         _         _      
     | |                   | |       | |       | |     
  ___| | ___   _ _ __   ___| |_   ___| |_ _   _| | ___ 
@@ -17,6 +7,9 @@
            __/ |                          __/ |       
           |___/                          |___/        
 */
+html{box-sizing:border-box}
+*,*:before,*:after{box-sizing:inherit}
+
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
 body{margin:0}
 
